--- a/RCBD_ClewerScarisbrick2001.Rmd
+++ b/RCBD_ClewerScarisbrick2001.Rmd
@@ -3,6 +3,7 @@ title: "Randomized complete block design"
 output: 
   html_document:
     includes:
+      in_header: header.html
       after_body: footer.html		
 ---
 
