--- a/RCBD_ClewerScarisbrick2001.Rmd
+++ b/RCBD_ClewerScarisbrick2001.Rmd
@@ -19,24 +19,24 @@ pacman::p_load(purrr)
 pacman::p_load(readr, tidyverse,  # data import and handling
                emmeans, multcomp, # mean comparisons
                ggplot2, desplot)  # plots
-
-# data (import via URL)
-dat <- read_csv("https://raw.githubusercontent.com/SchmidtPaul/DSFAIR/master/data/Clewer%26Scarisbrick2001.csv")
-```
-```{r, echo=FALSE, purl=FALSE}
-dat %>%
-  kable(escape = FALSE) %>% 
-  kable_styling(bootstrap_options = c("bordered", "hover", "condensed", "responsive"), 
-                full_width = FALSE) %>% 
-  scroll_box(height = "200px")
 ```
 
 # Data
 
 This example is taken from Chapter *"2 Randomized complete block design"* of the course material ["Mixed models for metric data (3402-451)"](https://www.uni-hohenheim.de/en/module-catalogue/lehrveranstaltung/mixed-models-for-metric-data-3402-451){target="_blank"} by [Prof. Dr. Hans-Peter Piepho](https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257){target="_blank"}. It considers data published in [Clewer and Scarisbrick (2001)](https://www.wiley.com/en-us/Practical+Statistics+and+Experimental+Design+for+Plant+and+Crop+Science-p-9780471899082){target="_blank"}  from a yield (t/ha) trial laid out as a randomized complete `block` design (3 blocks) with `cultivar` (4 cultivars) being the only treatment factor. Thus, we have a total of 12 plots.
 
+## Import
+
+```{r, message=FALSE, warning=FALSE}
+# data (import via URL)
+dataURL <- "https://raw.githubusercontent.com/SchmidtPaul/DSFAIR/master/data/Clewer%26Scarisbrick2001.csv"
+dat <- read_csv(dataURL)
+
+dat
+```
+
 ## Formatting
-Before anything, the columns `block` and `cultivar` should be encoded as factors, since R by default encoded them as numeric.
+Before anything, the columns `block` and `cultivar` should be encoded as factors, since R by default encoded them as character.
 
 ```{r}
 dat <- dat %>% 
@@ -157,7 +157,7 @@ ggplot() +
     color = "red",
     position = position_nudge(x = 0.2)
   ) + 
-  ylim(0, NA) + # forces y-axis to start at 0
+  ylim(0, NA) + # force y-axis to start at 0
   ylab("Yield in t/ha") + # label y-axis
   xlab("Cultivar") +      # label x-axis
   labs(caption = "Means followed by a common letter are not significantly different according to the Tukey-test") +
