--- a/CRD_Mead1993.Rmd
+++ b/CRD_Mead1993.Rmd
@@ -155,7 +155,8 @@ ggplot() +
   ylim(0, NA) + # force y-axis to start at 0
   ylab("Yield in t/ha") + # label y-axis
   xlab("Variety") +      # label x-axis
-  labs(caption = "Red dots and error bars represent adjusted mean with 95% confidence limits per genotype
+  labs(caption = "Black dots represent raw data
+       Red dots and error bars represent adjusted mean with 95% confidence limits per variety
        Means followed by a common letter are not significantly different according to the Tukey-test") +
   theme_classic() # clearer plot format 
 ```
