--- a/alpha_JohnWilliams1995.Rmd
+++ b/alpha_JohnWilliams1995.Rmd
@@ -25,7 +25,7 @@ pacman::p_load(readr, tidyverse, forcats, # data import and handling
 
 # Data
 
-This example is taken from Chapter *"3.8 Analysis of an $\alpha$-design"* of the course material ["Mixed models for metric data (3402-451)"](https://www.uni-hohenheim.de/en/module-catalogue/lehrveranstaltung/mixed-models-for-metric-data-3402-451){target="_blank"} by [Prof. Dr. Hans-Peter Piepho](https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257){target="_blank"}. It considers data published in [John and Williams (1995)](https://onlinelibrary.wiley.com/doi/abs/10.1002/bimj.4710380703){target="_blank"} from a yield (t/ha) trial laid out as an alpha design. The trial had 24 genotypes (`gen`), three complete replicates (`rep`) and six incomplete blocks (`inc.block`) within each replicate. The block size was four.
+This example is taken from Chapter *"3.8 Analysis of an $\alpha$-design"* of the course material ["Mixed models for metric data (3402-451)"](https://www.uni-hohenheim.de/en/module-catalogue/lehrveranstaltung/mixed-models-for-metric-data-3402-451){target="_blank"} by [Prof. Dr. Hans-Peter Piepho](https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257){target="_blank"}. It considers data published in [John and Williams (1995)](https://onlinelibrary.wiley.com/doi/abs/10.1002/bimj.4710380703){target="_blank"} from a yield (t/ha) trial laid out as an alpha design. The trial had 24 genotypes (`gen`), 3 complete replicates (`rep`) and 6 incomplete blocks (`inc.block`) within each replicate. The block size was 4.
 
 ## Import
 
