--- a/rowcol_KemptonFox1997.Rmd
+++ b/rowcol_KemptonFox1997.Rmd
@@ -24,7 +24,7 @@ pacman::p_load(janitor, readr, tidyverse, # data import and handling
 
 # Data
 
-This example is taken from Chapter *"3.10 Analysis of a resolvable row-column design"* of the course material ["Mixed models for metric data (3402-451)"](https://www.uni-hohenheim.de/en/module-catalogue/lehrveranstaltung/mixed-models-for-metric-data-3402-451){target="_blank"} by [Prof. Dr. Hans-Peter Piepho](https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257){target="_blank"}. It considers data published in [Kempton and Fox (1997)](https://www.springer.com/de/book/9780412547508){target="_blank"} from a yield trial laid out as a resolvable row-column design. When two blocking structures are used which are arranged in rows and columns, we have a *row-column design*. If rows and columns can be grouped to form complete replicates, the design is *resolvable*, as in case of one-way blocking. The trial had 35 genotypes (`gen`), 2 complete replicates (`rep`) with 5 rows (`row`) and 7 columns (`col`). Thus, a complete replicate is subdivided into incomplete rows and columns.
+This example is taken from Chapter *"3.10 Analysis of a resolvable row-column design"* of the course material ["Mixed models for metric data (3402-451)"](https://www.uni-hohenheim.de/en/module-catalogue/lehrveranstaltung/mixed-models-for-metric-data-3402-451){target="_blank"} by [Prof. Dr. Hans-Peter Piepho](https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257){target="_blank"}. It considers data published in [Kempton and Fox (1997)](https://www.springer.com/de/book/9780412547508){target="_blank"} from a yield trial laid out as a resolvable row-column design. The trial had 35 genotypes (`gen`), 2 complete replicates (`rep`) with 5 rows (`row`) and 7 columns (`col`). Thus, a complete replicate is subdivided into incomplete rows and columns.
 
 ## Import
 
@@ -57,7 +57,27 @@ desplot(data = dat,
         main = "Field layout", show.key = F)     # formatting
 ```
 
+When two blocking structures are used which are arranged in rows and columns, we have a *row-column design*. If rows and columns can be grouped to form complete replicates, the design is *resolvable*, as in case of one-way blocking.
 
+We could also have a look at the arithmetic means and standard deviations for yield per genotype (`gen`).
 
+```{r, warning=FALSE, message=FALSE}
+dat %>% 
+  group_by(gen) %>% 
+  summarize(mean    = mean(yield, na.rm=TRUE),
+            std.dev = sd(yield, na.rm=TRUE)) %>% 
+  arrange(desc(mean)) %>% # sort
+  print(n=Inf) # print full table
+```
+
+We can also create a plot to get a better feeling for the data.
+
+```{r, fig.align = "center"}
+ggplot(data = dat,
+       aes(y = yield, x = gen)) +
+  geom_point() +  # scatter plot
+  ylim(0, NA) +   # force y-axis to start at 0
+  theme_classic() # clearer plot format 
+```
 
 
