--- a/CRD_Mead1993.Rmd
+++ b/CRD_Mead1993.Rmd
@@ -184,3 +184,18 @@ mod %>%
   anova %>% 
   report() %>% text_short()
 ```
+
+# Exercises
+
+## Exercise 1
+
+This example is taken from *"Example 5.4"* of the course material ["Quantitative Methods in Biosciences (3402-420)"](https://www.uni-hohenheim.de/en/module-catalogue/modul/quantitative-methods-in-biosciences-3402-420){target="_blank"} by [Prof. Dr. Hans-Peter Piepho](https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257){target="_blank"}. It considers data published in [Mead et al. (1993, p.54)](https://www.routledge.com/Statistical-Methods-in-Agriculture-and-Experimental-Biology/Mead/p/book/9781584881872){target="_blank"}. The percentage moisture content is determined from multiple samples for each of four different soils. Notice that for this dataset you have no information on any specific field trial layout (*i.e.* `row` or `col` column are not present in the dataset). Therefore you should skip trying to create a field layout with `desplot()` and instead focus on the following:
+
+* Explore
+  + How many samples per soil were taken?
+  + Which soil has the highest value for moisture?
+  + Draw a plot with moisture values per soil
+* Analyze
+  + Compute an ANOVA 
+  + Perform multiple (mean) comparisons using the LSD test/t-test.
+* Repeat the analysis, but this time remove all moisture values larger than 12 at the very beginning.
