--- a/augmented_Pattersen1994.Rmd
+++ b/augmented_Pattersen1994.Rmd
@@ -218,20 +218,23 @@ ggplot() +
 
 TThis example is taken from Chapter *"3.9 Analysis of a resolvable design with checks"* of the course material ["Mixed models for metric data (3402-451)"](https://www.uni-hohenheim.de/en/module-catalogue/lehrveranstaltung/mixed-models-for-metric-data-3402-451){target="_blank"} by [Prof. Dr. Hans-Peter Piepho](https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257){target="_blank"}. It considers data from an augmented design that was laid out for 90 entries and 6 checks. The block size was 10. Incomplete blocks were formed according to a 10 x 10 lattice design, in which incomplete blocks can be grouped into complete replicates. Thus, this is a resolvable design. Checks are coded as 1001 to 1006, while the 90 entries are coded as 2 to 100 (note that there are no entries with labels 11, 21, 31, 41, 51, 61, 71, 81 and 91). Some of the checks have extra replication. We here consider the trait “yield”.
 
-
-It considers data published in [Gomez & Gomez (1984)](https://www.wiley.com/en-us/Statistical+Procedures+for+Agricultural+Research%2C+2nd+Edition-p-9780471870920){target="_blank"}. A randomized complete block experiment was conducted to assess the yield (kg/ha) of rice cultivar *IR8* at six different seeding densities (kg/ha).
-
-**Important:** The treatment factor (`density`) is actually quantitative variable, but for this exercise you should define it as a `factor` variable with 6 levels anyway. (Notice, however, that in such a case a regression analysis with `density` being a numeric variable is actually more efficient that ANOVA followed by multiple comparison of means.)
-
 * Explore
-  + Create a field layout with `desplot()`
-  + Draw a plot with moisture values per soil
+  + Draw a plot with yield per genotype
 * Analyze
-  + Compute an ANOVA 
-  + Perform multiple (mean) comparisons using the LSD test/t-test.
+  + Set up two models: One with blocks as fixed and one with blocks as random. Compare their average s.e.d. between genotype means. Choose the model with the smaller value.
+  + Compute an ANOVA for the chose model.
+  + Perform multiple (mean) comparisons based on the chosen model.
 
 ```{r, message=FALSE, warning=FALSE}
 # data (import via URL)
-dataURL <- "https://raw.githubusercontent.com/SchmidtPaul/DSFAIR/master/data/Gomez%26Gomez1984b.csv"
+dataURL <- "https://raw.githubusercontent.com/SchmidtPaul/DSFAIR/master/data/PiephoAugmentedLattice.csv"
 ex1dat <- read_csv(dataURL)
+
+desplot(data = ex1dat,
+        form = block ~ col + row | rep, # fill color per block, headers per replicate
+        text = geno, cex = 0.75, shorten = "no", # show genotype names per plot
+        col  = genoCheck, # different color for check genotypes
+        out1 = rep,   out1.gpar = list(col = "black"), # lines between reps
+        out2 = block, out2.gpar = list(col = "darkgrey"), # lines between blocks
+        main = "Field layout", show.key = F) # formatting
 ```
